# midimodulator

./: README.md
lib/: midi.rs
modulator/: Cargo.toml
modulator/src/: d110.rs  korg.rs  main.rs  midi.rs  modulation.rs  utils.rs
perc/: Cargo.toml
perc/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
thru/: Cargo.toml
thru/src/: configure.rs  interop.rs  main.rs  note.rs  notesink.rs  outputstage.rs
