[package]
name = "modulator"
version = "0.1.0"
authors = ["Andrew Booker <improvizone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
serialport = "4.0.0"
rand = "0.8.2"
getch = "0.2.1"
chrono = "0.4"
